# RType

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt  rtype.puml
client/: CMakeLists.txt  Doxyfile
client/sources/: CreateMainWindowEntities.cpp  CreateMainWindowEntities.hpp  EntitiesState.cpp  EntitiesState.hpp  GameState.cpp  GameState.hpp  LobbyState.cpp  LobbyState.hpp  NetworkState.cpp  NetworkState.hpp  RTypeNetworkClient.cpp  RTypeNetworkClient.hpp  main.cpp
client/sources/ASystem/: ASystem.hpp
client/sources/DLLoader/: DLLoader.hpp
client/sources/IComponent/: IComponent.hpp
client/sources/IComponentAPI/: IComponentAPI.hpp
client/sources/IECS/: IECS.hpp
client/sources/IEntity/: IEntity.hpp
client/sources/IEntityAPI/: IEntityAPI.hpp
client/sources/ISystem/: ISystem.hpp
client/sources/ISystemAPI/: ISystemAPI.hpp
client/sources/IWorld/: IWorld.hpp
client/tests/: CMakeLists.txt  testsAssertCriterionExist.cpp  testsEntitesState.cpp  testsGameState.cpp
commons/: .gitkeep
commons/tests/: CMakeLists.txt
commons/tests/containers/: testsCircularBufferClear.cpp  testsCircularBufferGetNbBufferedBytes.cpp  testsCircularBufferIsFull.cpp  testsCircularBufferReadDelimiterData.cpp  testsCircularBufferReadRawData.cpp  testsCircularBufferWriteRawData.cpp  testsThreadSafeCircularBufferClear.cpp  testsThreadSafeCircularBufferGetNbBufferedBytes.cpp  testsThreadSafeCircularBufferIsFull.cpp  testsThreadSafeCircularBufferReadDelimiterData.cpp  testsThreadSafeCircularBufferReadRawData.cpp  testsThreadSafeCircularBufferWriteRawData.cpp
commons/tests/ecs/: testsAComponent.cpp  testsASytem.cpp  testsAssertCriterionExist.cpp  testsIdGenerator.cpp  testsVersion.cpp
commons/tests/logger/: testsDefaultLogger.cpp  testsStandardLoggerLog.cpp  testsStandardLoggerLogLevel.cpp
entities/: CMakeLists.txt
entities/BydosSalve/: CMakeLists.txt
entities/BydosSalve/sources/: BydosSlaveEntity.cpp  BydosSlaveEntity.hpp  BydosSlaveEntityApi.cpp  BydosSlaveEntityApi.hpp  EntryPoint.cpp
entities/BydosSalve/tests/: CMakeLists.txt
entities/Kamikaze/: CMakeLists.txt
entities/Kamikaze/sources/: EntryPoint.cpp  KamikazeEntity.cpp  KamikazeEntity.hpp  KamikazeEntityApi.cpp  KamikazeEntityApi.hpp
entities/Kamikaze/tests/: CMakeLists.txt
entities/LobbyContainer/: CMakeLists.txt
entities/LobbyContainer/sources/: EntryPoint.cpp  LobbyContainerEntity.cpp  LobbyContainerEntity.hpp  LobbyContainerEntityApi.cpp  LobbyContainerEntityApi.hpp
entities/LobbyContainer/tests/: CMakeLists.txt  testsAssertCriterionExist.cpp
entities/Music/: CMakeLists.txt
entities/Music/sources/: EntryPoint.cpp  MusicEntity.cpp  MusicEntity.hpp  MusicEntityApi.cpp  MusicEntityApi.hpp
entities/Music/tests/: CMakeLists.txt
entities/Spawnable/: CMakeLists.txt
entities/Spawnable/sources/: EntryPoint.cpp  SpawnableEntity.cpp  SpawnableEntity.hpp  SpawnableEntityApi.cpp  SpawnableEntityApi.hpp
entities/Spawnable/tests/: CMakeLists.txt
entities/TitleSprite/: CMakeLists.txt
entities/TitleSprite/sources/: TitleSpriteEntity.cpp  TitleSpriteEntity.hpp  TitleSpriteEntityAPI.cpp  TitleSpriteEntityAPI.hpp  entryPoint.cpp
entities/TitleSprite/tests/: CMakeLists.txt
entities/background/: CMakeLists.txt
entities/background/sources/: BackgroundEntity.cpp  BackgroundEntity.hpp  BackgroundEntityApi.cpp  BackgroundEntityApi.hpp  EntryPoint.cpp
entities/background/tests/: CMakeLists.txt
entities/button/: CMakeLists.txt
entities/button/sources/: ButtonEntity.cpp  ButtonEntityApi.cpp  ButtonEntityApi.hpp  EntryPoint.cpp  PlayerEntity.cpp  PlayerEntity.hpp
entities/button/tests/: CMakeLists.txt
entities/example/: CMakeLists.txt  EntryPoint.cpp  ExampleEntity.cpp  ExampleEntityApi.hpp
entities/example/sources/: EntryPoint.cpp  ExampleEntity.cpp  ExampleEntity.hpp  ExampleEntityApi.cpp  ExampleEntityApi.hpp
entities/example/tests/: CMakeLists.txt
entities/player/: CMakeLists.txt
entities/player/sources/: ButtonEntity.cpp  ButtonEntity.hpp  ButtonEntityApi.hpp  EntryPoint.cpp  PlayerEntity.cpp  PlayerEntityApi.cpp  PlayerEntityApi.hpp
entities/player/tests/: CMakeLists.txt
entities/textInput/: CMakeLists.txt
entities/textInput/sources/: EntryPoint.cpp  TextInputEntity.cpp  TextInputEntity.hpp  TextInputEntityApi.cpp  TextInputEntityApi.hpp
entities/textInput/tests/: CMakeLists.txt
entities/textbox/: CMakeLists.txt
entities/textbox/sources/: EntryPoint.cpp  TextboxEntity.cpp  TextboxEntity.hpp  TextboxEntityApi.cpp  TextboxEntityApi.hpp
entities/textbox/tests/: CMakeLists.txt
server/: CMakeLists.txt  Doxyfile
server/sources/: RTypeServer.cpp  RTypeServer.hpp  debug.cpp  main.cpp
server/sources/client/: Client.cpp  Client.hpp  ClientState.hpp
server/sources/config/: Configuration.cpp  Configuration.hpp
server/sources/exception/: RTypeInvalidPasswordException.hpp  RTypeRoomAlreadyFullException.hpp  RTypeServerException.cpp  RTypeServerException.hpp  RTypeUnknownRoomException.hpp
server/sources/room/: GameInfos.cpp  GameInfos.hpp  Room.cpp  Room.hpp
server/tests/: CMakeLists.txt
server/tests/functional/: main.cpp
server/tests/sources/: testsAssertCriterionExist.cpp
systems/NetworkMovementLagCompensation/: CMakeLists.txt
systems/NetworkMovementLagCompensation/sources/: EntryPoint.cpp  NetworkMovementLagCompensation.cpp  NetworkMovementLagCompensation.hpp  NetworkMovementLagCompensationApi.cpp  NetworkMovementLagCompensationApi.hpp
systems/clientGameNetworkEntitySync/: CMakeLists.txt
systems/clientGameNetworkEntitySync/sources/: ClientGameNetworkEntitySyncSystem.cpp  ClientGameNetworkEntitySyncSystem.hpp  ClientGameNetworkEntitySyncSystemApi.cpp  ClientGameNetworkEntitySyncSystemApi.hpp  EntryPoint.cpp
systems/example/: CMakeLists.txt  EntryPoint.cpp  ExampleSystem.cpp  ExampleSystem.hpp  ExampleSystemApi.hpp
systems/example/sources/: EntryPoint.cpp  ExampleSystem.cpp  ExampleSystemApi.cpp  ExampleSystemApi.hpp
systems/example/tests/: CMakeLists.txt
systems/omegatron/: CMakeLists.txt
systems/sfml/: CMakeLists.txt
(+247 files in other folders)
