add_subdirectory(example)
add_subdirectory(player)
add_subdirectory(button)
add_subdirectory(TitleSprite)
add_subdirectory(background)
add_subdirectory(textbox)
add_subdirectory(Spawnable)
add_subdirectory(BydosSalve)
add_subdirectory(textInput)
add_subdirectory(LobbyContainer)
add_subdirectory(Kamikaze)
add_subdirectory(Music)
